manifests/immich/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-db
  template:
    metadata:
      labels:
        app: immich-db
    spec:
      containers:
      - name: postgres
        image: ghcr.io/immich-app/postgres:14-vectorchord0.3.0-pgvectors0.2.0
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: db-data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: db-data
        persistentVolumeClaim:
          claimName: immich-db
---
apiVersion: v1
kind: Service
metadata:
  name: immich-db
spec:
  type: ClusterIP
  selector:
    app: immich-db
  ports:
  - port: 5432
    targetPort: 5432
