manifests/immich/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-server
spec:
  type: ClusterIP
  selector:
    app: immich-server
  ports:
  - name: http
    port: 2283
    targetPort: 2283
